# accountability-ci-pipeline

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  manualGithub2Devops.yml
src/accountability_ci_pipeline/: ADECONNECT.py  calculation.py  database.py  source.py
tests/: test_connection.py  test_unit.py
