[project]
name = "accountability-ci-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom",email = "Tom.Chang@azed.gov"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.3)",
    "pyodbc (==5.2.0)",
    "pytest (==8.3.5)"
]

[tool.poetry]
packages = [{include = "accountability_ci_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
